--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -26,5 +26,28 @@
         img {
             width: 4%;
         }
+
+        .scroll-container {
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            .scroll {
+                width: 50px;
+                height: 50px;
+                border: 2px solid white;
+                border-radius: 50%;
+                &::before {
+                    content: '';
+                    position: absolute;
+                    top: 14px;
+                    left: 15px;
+                    width: 15px;
+                    height: 15px;
+                    border-left: 2px solid white;
+                    border-bottom: 2px solid white;
+                    transform: rotate(-45deg);
+                }
+            }
+        }
     }
 }
