--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -21,6 +21,16 @@
                 margin-right: -50px;
                 font-size: 15px;
             }
+            @media (max-width: 768px) {
+                h1 {
+                    font-size: 50px;
+                }
+                h2 {
+                    letter-spacing: 20px;
+                    margin-right: -20px;
+                    font-size: 10px;
+                }
+            }
         }
 
         img {
