--- a/src/components/crafts/crafts.scss
+++ b/src/components/crafts/crafts.scss
@@ -1,79 +1,114 @@
-.crafts-wrapper{
-  position: relative;
+.crafts-wrapper {
+    position: relative;
 
-  .progress {
-    position: sticky;
-    top: 0;
-    left: 0;
-    padding-top: 50px;
-    text-align: center;
-    color:white;
-    font-size: 36px;
+    .progress {
+        position: sticky;
+        top: 0;
+        left: 0;
+        padding-top: 50px;
+        text-align: center;
+        color: white;
+        font-size: 36px;
 
-    .progressBar {
-      height: 10px;
-      background-color: white;
-    }
-  }
-
-  .container {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    overflow: hidden;
-
-    .wrapper {
-      max-width: 1366px;
-      height: 100%;
-      margin: auto;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      gap: 50px;
-
-
-      .imageContainer {
-        flex: 1;
-        height: 50%;
-
-
-        img {
-          width: 100%;
-          height: 100%;
-          object-fit: cover;
-
+        .progressBar {
+            height: 10px;
+            background-color: white;
         }
-      }
 
-      .textContainer {
-        flex: 1;
+        @media (max-width: 500px) {
+            h1 {
+                font-size: 2rem;
+            }
+
+            .progressBar {
+                height: 7px;
+            }
+        }
+    }
+
+    .container {
         display: flex;
-        flex-direction: column;
-        gap: 30px;
+        align-items: center;
+        justify-content: center;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+
+        .wrapper {
+            max-width: 1366px;
+            height: 100%;
+            margin: auto;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 50px;
 
 
-        h2 {
-          font-size: 72px;
+            .imageContainer {
+                flex: 1;
+                height: 50%;
 
+                img {
+                    width: 100%;
+                    object-fit: cover;
+                }
+            }
+
+            .textContainer {
+                flex: 1;
+                display: flex;
+                flex-direction: column;
+                gap: 30px;
+
+
+                h2 {
+                    font-size: 72px;
+
+                }
+
+                p {
+                    color: gray;
+                    font-size: 20px;
+
+                }
+
+                button {
+                    background-color: white;
+                    border: none;
+                    border-radius: 10px;
+                    padding: 10px;
+                    width: 200px;
+                    cursor: pointer;
+                }
+            }
         }
 
-        p {
-          color: gray;
-          font-size: 20px;
+        @media (max-width: 500px) {
+            .wrapper {
+                flex-direction: column;
+                gap: 0px;
 
-        }
+                .imageContainer {
+                    height: 30%;
+                    margin-top: 8rem;
+                }
 
-        button {
-          background-color: white;
-          border: none;
-          border-radius: 10px;
-          padding: 10px;
-          width: 200px;
-          cursor: pointer;
+                .textContainer {
+                    padding: 1rem;
+
+                    h2 {
+                        font-size: 1.5rem;
+                    }
+
+                    p {
+                        font-size: 1rem;
+                    }
+
+                    button {
+                        width: 100%;
+                    }
+                }
+            }
         }
-      }
     }
-  }
 }
