--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -10,6 +10,25 @@
         height: 100%;
     }
 
+    @media (max-width: 500px) {
+        .wrapper {
+            width: 100%;
+            padding-left: 1rem;
+            padding-right: 1rem;
+        }
+
+        .pages {
+            width: 100%;
+            display: flex;
+            align-items: center;
+            justify-content: space-around;
+        }
+
+        span {
+            display: none;
+        }
+    }
+
     span {
         font-weight: bold;
         font-size: large;
