--- a/src/components/transition/transition.scss
+++ b/src/components/transition/transition.scss
@@ -32,6 +32,20 @@
             letter-spacing: 50px;
             margin-right: -50px;
         }
+        @media (max-width: 500px) {
+            h1 {
+                font-size: 50px;
+                letter-spacing: 30px;
+                margin-right: -30px;
+            }
+    
+            h2 {
+                display: flex;
+                font-size: 10px;
+                letter-spacing: 20px;
+                margin-right: -20px;
+            }
+        }
     }
 
 }
