--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -8,6 +8,8 @@
         align-items: center;
         justify-content: space-between;
         height: 100%;
+
+        padding: 0 30px;
     }
 
     span {
