--- a/src/components/crafts/crafts.scss
+++ b/src/components/crafts/crafts.scss
@@ -2,6 +2,7 @@
     position: relative;
 
     .progress {
+        width: 100%;
         position: sticky;
         top: 0;
         left: 0;
@@ -35,7 +36,7 @@
         overflow: hidden;
 
         .wrapper {
-            max-width: 1366px;
+            max-width: 1000px;
             height: 100%;
             margin: auto;
             display: flex;
@@ -46,6 +47,7 @@
 
             .imageContainer {
                 flex: 1;
+                overflow: hidden;
                 height: 50%;
 
                 img {
