--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -14,7 +14,9 @@
             text-align: center;
             h1 {
                 align-items: center;
-                font-size: 100px;
+                font-size: 180px;
+                letter-spacing: 150px;
+                margin-right: -150px;
             }
             h2 {
                 letter-spacing: 50px;
@@ -23,12 +25,14 @@
             }
             @media (max-width: 768px) {
                 h1 {
-                    font-size: 50px;
+                    font-size: 100px;
+                    letter-spacing: 75px;
+                    margin-right: -75px;
                 }
                 h2 {
                     letter-spacing: 20px;
                     margin-right: -20px;
-                    font-size: 10px;
+                    font-size: 15px;
                 }
             }
         }
