--- a/src/components/crafts/crafts.scss
+++ b/src/components/crafts/crafts.scss
@@ -61,6 +61,7 @@
                 display: flex;
                 flex-direction: column;
                 gap: 30px;
+                overflow: hidden;
 
 
                 h2 {
@@ -89,6 +90,7 @@
             .wrapper {
                 flex-direction: column;
                 gap: 0px;
+                overflow: hidden;
 
                 .imageContainer {
                     height: 30%;
