--- a/src/components/nav/nav.scss
+++ b/src/components/nav/nav.scss
@@ -10,6 +10,13 @@
         height: 100%;
 
         padding: 0 30px;
+        span {
+            font-weight: bold;
+            font-size: large;
+            a {
+                font-size: 18px;
+            }
+        }
     }
 
     @media (max-width: 500px) {
@@ -31,14 +38,13 @@
         }
     }
 
-    span {
-        font-weight: bold;
-        font-size: large;
-    }
 
     .pages {
         font-weight: bold;
         display: flex;
         gap: 30px;
+        a {
+            font-size: 18px;
+        }
     }
 }
