--- a/src/components/crafts/crafts.scss
+++ b/src/components/crafts/crafts.scss
@@ -1,59 +1,24 @@
 .crafts-wrapper {
-    position: relative;
-
-    .progress {
-        width: 100%;
-        position: sticky;
-        top: 0;
-        left: 0;
-        padding-top: 50px;
-        text-align: center;
-        color: white;
-        font-size: 36px;
-
-        .progressBar {
-            height: 10px;
-            background-color: white;
-        }
-
-        @media (max-width: 500px) {
-            h1 {
-                font-size: 2rem;
-            }
-
-            .progressBar {
-                height: 7px;
-            }
-        }
-    }
 
     .container {
-        display: flex;
-        align-items: center;
-        justify-content: center;
         width: 100%;
         height: 100%;
         overflow: hidden;
 
         .wrapper {
-            max-width: 1000px;
             height: 100%;
-            margin: auto;
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
             gap: 50px;
 
 
-            .imageContainer {
-                flex: 1;
-                overflow: hidden;
-                height: 50%;
-
-                img {
-                    width: 100%;
-                    object-fit: cover;
-                }
+            img {
+                width: 500px;
+                margin-left: 5%;
+                object-fit: cover;
+                margin-top: 200px;
             }
 
             .textContainer {
@@ -62,15 +27,18 @@
                 flex-direction: column;
                 gap: 30px;
                 overflow: hidden;
+                padding-left: 10%;
+                padding-right: 10%;
 
 
                 h2 {
                     font-size: 72px;
-
+                    font-weight: bolder;
+                    color: #22323f;
                 }
 
                 p {
-                    color: gray;
+                    color: #22323f;
                     font-size: 20px;
 
                 }
@@ -92,20 +60,22 @@
                 gap: 0px;
                 overflow: hidden;
 
-                .imageContainer {
-                    height: 30%;
-                    margin-top: 8rem;
+                img {
+                    width: 350px;
                 }
 
                 .textContainer {
-                    padding: 1rem;
+                    padding-left: 10%;
+                    padding-right: 10%;
+                    padding-bottom: 16rem;
 
                     h2 {
                         font-size: 1.5rem;
                     }
 
                     p {
-                        font-size: 1rem;
+                        font-size: 13px;
+                        line-height: 23px;
                     }
 
                     button {
