--- a/src/components/stories/stories.scss
+++ b/src/components/stories/stories.scss
@@ -110,3 +110,17 @@
         }
     }
 }
+
+.text-ring [style*=--index] {
+    font-family: monospace;
+    text-transform: uppercase;
+    font-weight: bold;
+    font-size: calc(var(--font-size, 2) * 1rem);
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform:
+      translate(-50%, -50%)
+      rotate(calc(360deg / var(--total) * var(--index)))
+      translateY(calc(var(--radius, 5) * -1ch));
+  }
