--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -2,18 +2,21 @@
     width: 100%;
     .team-title {
         display: flex;
-        flex-direction: column;
+        flex-direction: row;
+        margin: auto;
+        justify-content: center;
         text-align: center;
         padding-top: 45px;
         padding: 1rem;
         h1 {
-            font-size: 35px;
+            font-size: 60px;
         }
 
         @media (max-width: 700px){
+            flex-direction: column;
             padding-top: 30px;
             h1 {
-                font-size: 30px;
+                font-size: 60px;
             }
         }
     }
@@ -21,7 +24,7 @@
         display: grid;
         align-items: center;
         margin: auto;
-        width: 80%;
+        width: 90%;
         grid-template-columns: repeat(3, 1fr);
         .member-grid {
             padding: 10px;
@@ -33,7 +36,7 @@
                 background-color: white;
                 font-weight: bold;
                 border-radius: 10px;
-                width: 45%;
+                width: 40%;
                 justify-content: center;
                 p {
                     font-size: 18px;
@@ -42,25 +45,25 @@
             .member-grid-image {
                 padding-top: 2%;
                 img {
-                    width: 50%;
+                    width:180px;
                 }
             }
         }
         @media (max-width: 700px) {
             .member-grid {
-                padding: 30px 10px;
+                padding: 20px 5px 5px 5px;
                 .member-grid-title {
                     border-radius: 10px;
                     width: 80%;
                     justify-content: center;
                     p {
-                        font-size: 12px;
+                        font-size: 10px;
                     }
                 }
                 .member-grid-image {
                     padding-top: 10px;
                     img {
-                        width: 100%;
+                        width: 120px;
                         margin: auto;
                         display: block;
                         border-radius: 20px;
@@ -72,14 +75,85 @@
     }
 }
 
-.about-container__center {
-    height: 100vh;
+// .about-container__center {
 
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
+//     display: flex;
+//     flex-direction: column;
+//     justify-content: center;
+//     align-items: center;
+// }
+
+.about-all-container {
+    width: 100%;
+    .about-title {
+        display: flex;
+        flex-direction: row;
+        margin: auto;
+        justify-content: center;
+        text-align: center;
+        padding-top: 45px;
+        padding: 1rem;
+        h1 {
+            font-size: 60px;
+        }
+
+        @media (max-width: 700px){
+            flex-direction: column;
+            padding-top: 15px;
+            padding-bottom: 0px;
+            h1 {
+                font-size: 60px;
+            }
+        }
+    }
+    .about-wrapper {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        margin: auto;
+        width: 100%;
+        height: 100%;
+        .about-container {
+            border: 2px solid #22323f;
+            align-items: center;
+            border-radius: 10px;
+            width: 90%;
+            height: 58%;
+            margin: auto;
+            padding: 10px;
+            .about-host {
+                height: 30px;
+                h1 {
+                    width: 70px;
+                }
+                p {
+                    font-size: 12px;
+                }
+                .about-members {
+                    display: flex;
+                    flex-direction: row;
+                    flex-wrap: wrap;
+                    // max-width: 270px;
+                    min-width: 270px;
+                }
+            }
+        }
+        .about-host {
+            width: 90%;
+            padding-bottom: 20px;
+            h1 {
+                font-size: 12px;
+                width: 70px;
+            }
+            p {
+                font-size: 12px;
+                display: flex;
+                flex-direction: row;
+            }
+        }
+    }
+
 }
 
 .about-img-gallery {
@@ -98,7 +172,7 @@
 }
 
 .about-tabs {
-    height: 100vh;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -174,11 +248,8 @@
 
 .about-host {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
+    flex-direction: row;
     align-items: center;
-
-    gap: 1rem;
 }
 
 .about-host p {
