--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,7 @@
 html{
   scroll-snap-type: y mandatory;
-  scroll-behavior: smooth;
+  // scroll-behavior: smooth;
+  scroll-behavior: auto;
   overflow-x: hidden;
 }
 
@@ -14,6 +15,7 @@ html{
 
 body {
   color:white;
+
 }
 
 a {
