--- a/src/components/banner/banner.scss
+++ b/src/components/banner/banner.scss
@@ -1,38 +1,66 @@
 .banner-wrapper {
     .banner{
-        max-width: 1000px;
         height: 100%;
+        width: 100%;
         margin: auto;
         align-items: center;
         .txt-container {
-            width: 100%;
             height: 60%;
             display: flex;
             flex-direction: column;
             justify-content: center;
             gap: 30px;
             text-align: center;
+            .title-container {
+                display: flex;
+                flex-direction: row;
+                text-align:center;
+                margin-left: auto;
+                margin-right: auto;
+                width: 50%;
+            }
+            .subtitle-container {
+                display: flex;
+                flex-direction: row;
+                text-align: center;
+                width: 40%;
+                margin-left: auto;
+                margin-right: auto;
+                justify-content: space-between;
+            }
             h1 {
                 align-items: center;
                 font-size: 180px;
                 letter-spacing: 150px;
                 margin-right: -150px;
+                width: 100%;
             }
             h2 {
                 letter-spacing: 50px;
                 margin-right: -50px;
                 font-size: 15px;
+                width: 100%;
             }
             @media (max-width: 768px) {
+                .title-container {
+                    width: 100%;
+                }
+                .subtitle-container {
+                    width: 80%;
+                }
                 h1 {
-                    font-size: 100px;
-                    letter-spacing: 75px;
-                    margin-right: -75px;
+                    text-align: center;
+                    font-size: 6rem;
+                    margin: auto;
+                    letter-spacing: 0rem;
+                    // margin-right: -75px;
                 }
                 h2 {
-                    letter-spacing: 20px;
-                    margin-right: -20px;
-                    font-size: 15px;
+                    text-align: center;
+                    margin: auto;
+                    font-size: 1rem;
+                    letter-spacing: 0rem;
+                    margin-right: 0rem;
                 }
             }
         }
