--- a/src/components/description/description.scss
+++ b/src/components/description/description.scss
@@ -6,7 +6,7 @@
     .description-container {
         width: 80%;
         padding-left: 20%;
-        height: 100%;
+        height: 80%;
         font-size: 18px;
         line-height: 23px;
         .overlap-group {
@@ -22,6 +22,7 @@
         }
     }
     @media (max-width: 700px) {
+        padding-top: 20%;
         .description-container{
             flex-direction: column;
             align-items: center;
@@ -35,10 +36,10 @@
             }
             .div {
                 .text-wrapper-2 {
-                    font-size: 18px;
+                    font-size: 1rem;
                 }
                 .text-wrapper-3 {
-                    font-size: 16px;
+                    font-size: 0.9rem;
                 }
             }
         }
