--- a/src/components/about/about.scss
+++ b/src/components/about/about.scss
@@ -6,10 +6,9 @@
         margin: auto;
         justify-content: center;
         text-align: center;
-        padding-top: 45px;
         padding: 1rem;
         h1 {
-            font-size: 60px;
+            font-size: 3rem;
         }
 
         @media (max-width: 700px){
@@ -45,7 +44,7 @@
             .member-grid-image {
                 padding-top: 2%;
                 img {
-                    width:180px;
+                    width:40%;
                 }
             }
         }
@@ -63,7 +62,7 @@
                 .member-grid-image {
                     padding-top: 10px;
                     img {
-                        width: 120px;
+                        width: 100%;
                         margin: auto;
                         display: block;
                         border-radius: 20px;
@@ -75,20 +74,13 @@
     }
 }
 
-// .about-container__center {
-
-//     display: flex;
-//     flex-direction: column;
-//     justify-content: center;
-//     align-items: center;
-// }
-
 .about-all-container {
     width: 100%;
     .about-title {
         display: flex;
         flex-direction: row;
-        margin: auto;
+        margin-left: auto;
+        margin-right: auto;
         justify-content: center;
         text-align: center;
         padding-top: 45px;
@@ -99,10 +91,8 @@
 
         @media (max-width: 700px){
             flex-direction: column;
-            padding-top: 15px;
-            padding-bottom: 0px;
             h1 {
-                font-size: 60px;
+                font-size: 3rem;
             }
         }
     }
@@ -120,36 +110,38 @@
             border-radius: 10px;
             width: 90%;
             height: 58%;
-            margin: auto;
+            margin-left: auto;
+            margin-right: auto;
             padding: 10px;
             .about-host {
-                height: 30px;
-                h1 {
-                    width: 70px;
-                }
-                p {
-                    font-size: 12px;
+                height: 2.2rem;
+                .about-heading {
+                    width: 8rem;
                 }
                 .about-members {
                     display: flex;
                     flex-direction: row;
                     flex-wrap: wrap;
                     // max-width: 270px;
-                    min-width: 270px;
+                    p {
+                        font-size: 1rem;
+                    }
                 }
             }
-        }
-        .about-host {
-            width: 90%;
-            padding-bottom: 20px;
-            h1 {
-                font-size: 12px;
-                width: 70px;
-            }
-            p {
-                font-size: 12px;
-                display: flex;
-                flex-direction: row;
+            @media (max-width: 700px) {
+                .about-host {
+                    height: 1.7rem;
+                    .about-heading {
+                        width: 4rem;
+                        font-size: 0.8rem;
+                        min-width: 1.0rem;
+                    }
+                    .about-members {
+                        p {
+                            font-size: 0.7rem;
+                        }
+                    }
+                }
             }
         }
     }
@@ -165,95 +157,31 @@
     gap: 3rem;
 }
 
-.about-img-gallery img {
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-}
-
-.about-tabs {
-    height: 100%;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-
-    gap: 4rem;
-}
-
-.about-tabs__list {
-    display: flex;
-    justify-content: center;
-    gap: 0.75rem;
-
-    padding: 0 15px;
-    width: 100%;
-    -ms-overflow-style: none;
-    scrollbar-width: none;
-
-    @media (max-width: 680px) {
-        justify-content: start;
-        overflow: scroll;
-        padding-bottom: 1rem;
+.about-wrapper {
+    .about-host {
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        width: 89%;
     }
-}
-
-.about-tabs__list::-webkit-scrollbar {
-    display: none;
-}
-
-.about-tabs__trigger {
-    font-size: 24px;
-    line-height: 1.1em;
-    font-weight: 500;
-    background: transparent;
-    border: 0;
-    color: #22323f;
-
-    cursor: pointer;
-
-    white-space: nowrap;
-
-    @media (max-width: 860px) {
-        font-size: 20px;
+    h1 {
+        width: 8rem;
     }
-}
+    @media (max-width: 700px) {
+        .about-host {
+            width: 85%;
+        }
 
-.about-tabs__trigger[data-state='active'] {
-    box-shadow: 0 1.2em 0 -0.45em #22323f;
-}
+        .about-host h1 {
+            font-size: 0.5rem;
+            width: 3rem;
+        }
 
-.about-tabs__content {
-    font-size: 20px;
-    line-height: 1.5rem;
-    height: calc(1.5rem * 10);
+        .about-host p {
+            text-align: center;
+            font-size: 0.5rem;
+            line-height: 1.2rem;
+        }
 
-    display: grid;
-    align-content: start; /* prevent content from stretching */
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 0.75rem;
-
-    @media (max-width: 768px) {
-        grid-template-columns: 1fr;
     }
-}
-
-.about-host__container {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    gap: 4rem;
-}
-
-.about-host {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-}
-
-.about-host p {
-    text-align: center;
-    font-size: 20px;
-    line-height: 1.2em;
 }
